Made the title configurable

--- a/admin/config.php.example
+++ b/admin/config.php.example
@@ -1,5 +1,8 @@
 <?php
 
+// site name
+$title = 'Slides';
+
 // users allowed to use the admin interface
 // checked vs the $_SERVER['REMOTE_USER'] variable
 $allowed_users = array(
